fix a bug where some images overflow

--- a/app/assets/stylesheets/images.css.sass
+++ b/app/assets/stylesheets/images.css.sass
@@ -1,7 +1,6 @@
 @import "compass"
 .image, .image-show
   img
-    max-width: 400px
     max-height: 400px
 .image-show
   text-align: center
